--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -2,7 +2,7 @@
   "name": "ai-development-monitor",
   "displayName": "AI Development Monitor",
   "description": "Monitor and evaluate GitHub Copilot suggestions",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "publisher": "local-publisher",
   "license": "MIT",
   "repository": {
@@ -85,5 +85,9 @@
   },
   "scripts": {
     "package": "vsce package"
+  },
+  "dependencies": {
+    "ws": "^8.13.0",
+    "crypto": "^1.0.1"
   }
 }
