feat: Add GitHub Copilot Chat test execution and TDD Dashboard integration
- Enhanced run_test_execution.py script with JSON input/output format for GitHub Copilot integration
- Added test template generation for Copilot suggestions when no tests are provided
- Improved the AI Monitor Panel TDD Dashboard to display GitHub Copilot test results
- Added GitHub Copilot specific styling to the TDD Dashboard for better visualization
- Added configuration options for test execution display in TDD Dashboard
- Fixed path handling for test execution in Copilot Chat integration
- Improved error handling and user feedback for test execution
- Updated documentation to reflect new features and capabilities

Version bump: 0.5.1 -> 0.6.0
Date: 2025-05-15

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -2,7 +2,7 @@
   "name": "ai-development-monitor",
   "displayName": "AI Development Monitor",
   "description": "Monitor and evaluate GitHub Copilot suggestions",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "publisher": "local-publisher",
   "license": "MIT",
   "repository": {
@@ -95,6 +95,11 @@
           "default": true,
           "description": "Automatically evaluate code suggestions from Copilot Chat"
         },
+        "aiDevelopmentMonitor.autoRunTestsOnSuggestions": {
+          "type": "boolean",
+          "default": true,
+          "description": "Automatically run tests on code suggestions from GitHub Copilot Chat"
+        },
         "aiDevelopmentMonitor.notificationLevel": {
           "type": "string",
           "enum": [
@@ -144,6 +149,16 @@
           "type": "boolean",
           "default": true,
           "description": "Automatically run tests when code changes"
+        },
+        "aiDevelopmentMonitor.tdd.showExecutionResults": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show test execution results in the TDD Dashboard"
+        },
+        "aiDevelopmentMonitor.tdd.includeGithubCopilotResults": {
+          "type": "boolean",
+          "default": true,
+          "description": "Include GitHub Copilot Chat suggestion test results in the TDD Dashboard"
         },
         "aiDevelopmentMonitor.tdd.showInlineCoverage": {
           "type": "boolean",
